# lean.py

./: .gitignore  LICENSE  LeanPy.lean  README.md  lake-manifest.json  lakefile.lean  lakefile.toml  main.py  notes.org  pyproject.toml
.github/workflows/: ci.yml  docs.yml
LeanPy/: Attr.lean  Export.lean  Kernel.lean  Python.lean  Reflect.lean  Registry.lean  TypeRepr.lean  Z3.lean
LeanPy/Kernel/: Compat.lean  Delab.lean  Elab.lean  Environment.lean  Frontend.lean  Goal.lean  Protocol.lean  Serial.lean  Tactic.lean
LeanPy/Kernel/Frontend/: Basic.lean  Distil.lean  InfoTree.lean  MetaTranslate.lean  Refactor.lean
LeanPy/Kernel/Tactic/: Assign.lean  Fragment.lean  Prograde.lean
LeanPy/native/: python_bridge.c
docs/: ARCHITECTURE.md  EXCEPTIONS.md  goalstate-debug.plan.md  pantograph-port.plan.md  z3py-guide.md
docs/source/: conf.py  getting_started.rst  index.rst  project_setup.rst  z3py-guide.md
docs/source/_static/css/: custom.css
docs/source/api/: exceptions.rst  kernel.rst  library.rst  marshal.rst  registry.rst
docs/source/examples/: 01_basic.rst  02_pantograph_kernel.rst  03_numpy_typed.rst  04_sympy_tactic.rst  05_knuckledragger.rst  06_effectful_verifier.rst
examples/: README.md
examples/01_basic/: README.md
examples/01_basic/lean/: Basic.lean  lake-manifest.json  lakefile.toml
examples/01_basic/python/: main.py
examples/02_pantograph_kernel/: README.md
examples/02_pantograph_kernel/lean/: PantographDemo.lean  lake-manifest.json  lakefile.toml
examples/03_numpy_typed/: README.md  pyproject.toml  run
examples/04_sympy_tactic/: README.md
examples/05_knuckledragger/: README.md
examples/05_knuckledragger/python/: knuckle_bridge.py  lean_to_z3.py  main.py  pyproject.toml
examples/06_effectful_verifier/python/: expr_builder.py  main.py  pyproject.toml  refine.py
examples/07_z3py_drop_in/: README.md  prove_with_lean.py
examples/lean/: PyleanExample.lean  README.md  lake-manifest.json  lakefile.toml
examples/python/: main.py
lean_py/: __init__.py  _parse.py  _runtime.py  base_types.py  exceptions.py  kernel.py  lean_ffi.py  lean_types.py  library.py  marshal.py  project.py  registry.py  utils.py
lean_py/z3/: __init__.py  _ast.py  _inductive_reg.py  core.py  smt2.py  solver.py  tactic.py
tests/: conftest.py  leaks_check.sh  python.supp  test_callable.py  test_exceptions.py  test_ffi.py  test_introspection.py  test_kernel.py  test_kernel_extra.py  test_kernel_full.py  test_library.py  test_marshal.py  test_memory.py  test_pattern_match.py  test_python_in_lean.py  test_sympy_demo.py  test_transport_unification.py  test_z3_compat.py  test_z3_ported.py  test_z3_semantic.py  utils.py
tests/lean/: #TestLib.lean#  TestLib.lean  lake-manifest.json  lakefile.toml
(+22 files in other folders)
