[project]
name = "lean_py"
version = "0.1.0"
description = "Python-Lean interop made easy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pycparser>=2.22"]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
