[project]
name = "lean_py"
version = "0.1.0"
description = "Effortless Python ↔ Lean 4 interop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pycparser>=2.22"]

[project.urls]
Homepage = "https://github.com/kiranandcode/lean.py"
Repository = "https://github.com/kiranandcode/lean.py"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
